# ac_leds

./: .gitignore  .pylintrc  AC Leds.spec  Makefile  README.md  pyproject.toml  requirements.txt
ac_leds/: rev_colors.py  service.py  service_aura.py  service_steel_engine.py
ac_leds/ac/: udp_packs.py  udp_telemetry.py
ac_leds/aura/: api.py  bgr_color.py  device_color.py  keyboard.py
ac_leds/gauges/: gauge.py  gears.py  pedals.py  rev_bar.py  steer.py
ac_leds/open_rgb/: api.py  colors.py
ac_leds/steel_engine/: api.py
tests/: __init__.py  test_ac_udp_telemetry.py  test_aura_api.py  test_aura_bgr_color.py
